Expand some script in additional files due to more clean and readable code

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -121,5 +121,13 @@
 
     "serpstatContextMenu": {
         "message": "Serpstat check word +"
+    },
+
+    "serpstatLocale": {
+        "message": "se=g_bg"
+    },
+
+    "pageSpeedLocale": {
+        "message": "hl=en"
     }
 }
