Add some styles and additional translations

--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -121,5 +121,9 @@
 
     "serpstatContextMenu": {
         "message": "Serpstat check word +"
+    },
+
+    "missingH1": {
+        "message": "Внимание! Липсва H1 елемент на тази страница."
     }
 }
