--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -129,5 +129,9 @@
 
     "pageSpeedLocale": {
         "message": "hl=en"
+    },
+
+    "missingH1": {
+        "message": "Warrning! Missing H1 element on that page!"
     }
 }
