Changes in JSON language translation files

--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -120,7 +120,7 @@
     },
 
     "serpstatContextMenu": {
-        "message": "Serpstat check word +"
+        "message": "Serpstat check word in"
     },
 
     "missingH1": {
