--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -120,11 +120,15 @@
     },
 
     "serpstatContextMenu": {
-        "message": "Serpstat check word +"
+        "message": "Serpstat check word in"
     },
 
     "serpstatLocale": {
         "message": "se=g_bg"
+    },
+
+    "serpstatDefaultGoogle": {
+        "message": "Google (BG)"
     },
 
     "pageSpeedLocale": {
