Small changes in translation files

--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -1,9 +1,9 @@
 {
   "name": {
-    "message": "Netpeak SEO Checkery"
+    "message": "Netpeak SEO OnPage Checker"
   },
   "description": {
-    "message": "The best SEO Checker"
+    "message": "OnPage SEO Checker"
   },
   "metaTitle": {
     "message": "Meta title"
