--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
   "name": {
-    "message": "SEO Checkerrr"
+      "message": "Netpeak SEO OnPage Checker"
   },
   "description": {
     "message": "The best SEO Checker"
