--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
     "name": {
-        "message": "Netpeak SEO OnPage Checker"
+        "message": "Netpeak SEO Tool"
     },
     "description": {
         "message": "OnPage SEO Checker"
