--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -1,6 +1,6 @@
 {
   "name": {
-    "message": "SEO Checker"
+    "message": "Netpeak SEO Tool"
   },
   "description": {
     "message": "The best SEO Checker"
