--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -51,7 +51,7 @@
     "message": "Покажи robots.txt"
   },
   "altTitleImages": {
-    "message": "Alt и Title за изображения"
+    "message": "Alt и Title"
   },
   "prevNext": {
     "message": "Prev/Next"
