--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -1,9 +1,9 @@
 {
     "name": {
-        "message": "Netpeak SEO Tool"
+        "message": "Netpeak Agency SEO Tool"
     },
     "description": {
-        "message": "Netpeak SEO Tool"
+        "message": "Netpeak Agency SEO Tool"
     },
     "shortDescription": {
         "message": "The best SEO Checker"
