--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -1,6 +1,6 @@
 {
   "name": {
-    "message": "Netpeak SEO Tool"
+    "message": "Netpeak Agency SEO Tool"
   },
   "description": {
     "message": "OnPage SEO Tool"
