Changes on locales on different languages

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -102,10 +102,10 @@
         "message": "Serpstat check word in"
     },
     "serpstatLocale": {
-        "message": "se=g_bg"
+        "message": "se=g_us"
     },
     "serpstatDefaultGoogle": {
-        "message": "Google (BG)"
+        "message": "Google (.COM)"
     },
     "pageSpeedLocale": {
         "message": "hl=en"
