--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -94,5 +94,11 @@
   },
   "serpstatContextMenu": {
     "message": "Serpstat check word"
+  },
+  "serpstatLocale": {
+    "message": "se=g_ru"
+  },
+  "serpstatDefaultGoogle": {
+    "message": "Google (.RU)"
   }
 }
