--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -1,110 +1,110 @@
 {
-    "name": {
-        "message": "Netpeak Agency SEO Tool"
-    },
-    "description": {
-        "message": "Netpeak Agency SEO Tool"
-    },
-    "shortDescription": {
-        "message": "The best SEO Checker"
-    },
-    "metaTitle": {
-        "message": "Meta title"
-    },
-    "metaDescription": {
-        "message": "Meta description"
-    },
-    "canonical": {
-        "message": "Canonical"
-    },
-    "h1Text": {
-        "message": "H1 Element"
-    },
-    "netpeakCloudIdText": {
-        "message": "ID"
-    },
-    "indexNoindex": {
-        "message": "Meta index/noindex"
-    },
-    "metaTitleErrorStart": {
-        "message": "Warning! Too long meta title. Current it is"
-    },
-    "h1Error": {
-        "message": "Warning! There are more than one H1 tags on that page!"
-    },
-    "missingH1": {
-        "message": "Warning! Missing H1 element on that page!"
-    },
-    "metaTitleErrorEnd": {
-        "message": "symbols!"
-    },
-    "refresh": {
-        "message": "Refresh +"
-    },
-    "back": {
-        "message": "Back +"
-    },
-    "externalTools": {
-        "message": "External Tools +"
-    },
-    "netpeakCloud": {
-        "message": "Netpeak Cloud +"
-    },
-    "headingsStructure": {
-        "message": "H1-H6 Structure +"
-    },
-    "showRobots": {
-        "message": "Show robots.txt +"
-    },
-    "altTitleImages": {
-        "message": "Alt and Title for images +"
-    },
-    "prevNext": {
-        "message": "Prev/Next +"
-    },
-    "hreflang": {
-        "message": "Hreflang +"
-    },
-    "externalLinks": {
-        "message": "External Links +"
-    },
-    "structuredData": {
-        "message": "Structured Data +"
-    },
-    "mainRecommendations": {
-        "message": "Recommendations +"
-    },
-    "httpHeaders": {
-        "message": "HTTP headers +"
-    },
-    "information": {
-        "message": "Information +"
-    },
-    "httpHeadersPanel": {
-        "message": "HTTP headers panel +"
-    },
-    "about": {
-        "message": "About +"
-    },
-    "waiting": {
-        "message": "Waiting... +"
-    },
-    "aboutText": {
-        "message": "The extension will help you find onPage errors. +"
-    },
-    "aboutAdText": {
-        "message": "Visit Netpeak for profesional service +"
-    },
-    "serpstatContextMenu": {
-        "message": "Serpstat check word in"
-    },
-    "serpstatLocale": {
-        "message": "se=g_uk"
-    },
-    "serpstatDefaultGoogle": {
-        "message": "Google (.CO.UK)"
-    },
-    "pageSpeedLocale": {
-        "message": "hl=en"
-    }
+  "name": {
+    "message": "Netpeak Agency SEO Tool"
+  },
+  "description": {
+    "message": "Netpeak Agency SEO Tool"
+  },
+  "shortDescription": {
+    "message": "SEO On Page Checker"
+  },
+  "metaTitle": {
+    "message": "Meta title"
+  },
+  "metaDescription": {
+    "message": "Meta description"
+  },
+  "canonical": {
+    "message": "Canonical"
+  },
+  "h1Text": {
+    "message": "H1 Element"
+  },
+  "netpeakCloudIdText": {
+    "message": "ID"
+  },
+  "indexNoindex": {
+    "message": "Meta index/noindex"
+  },
+  "metaTitleErrorStart": {
+    "message": "Warning! Too long meta title. Current it is"
+  },
+  "h1Error": {
+    "message": "Warning! There are more than one H1 tags on that page!"
+  },
+  "missingH1": {
+    "message": "Warning! Missing H1 element on that page!"
+  },
+  "metaTitleErrorEnd": {
+    "message": "symbols!"
+  },
+  "refresh": {
+    "message": "Refresh"
+  },
+  "back": {
+    "message": "Back"
+  },
+  "externalTools": {
+    "message": "External Tools"
+  },
+  "netpeakCloud": {
+    "message": "Netpeak Cloud"
+  },
+  "headingsStructure": {
+    "message": "H1-H6 Structure"
+  },
+  "showRobots": {
+    "message": "Show robots.txt"
+  },
+  "altTitleImages": {
+    "message": "Alt and Title for images"
+  },
+  "prevNext": {
+    "message": "Prev/Next"
+  },
+  "hreflang": {
+    "message": "Hreflang"
+  },
+  "externalLinks": {
+    "message": "External Links"
+  },
+  "structuredData": {
+    "message": "Structured Data"
+  },
+  "mainRecommendations": {
+    "message": "Recommendations"
+  },
+  "httpHeaders": {
+    "message": "HTTP headers"
+  },
+  "information": {
+    "message": "Information"
+  },
+  "httpHeadersPanel": {
+    "message": "HTTP headers panel"
+  },
+  "about": {
+    "message": "About"
+  },
+  "waiting": {
+    "message": "Waiting..."
+  },
+  "aboutText": {
+    "message": "The extension will help you find onPage errors."
+  },
+  "aboutAdText": {
+    "message": "Visit <a href='https://netpeak.net/?utm_source=chrome-seo-extension' target='_blank'>Netpeak</a> for profesional service."
+  },
+  "serpstatContextMenu": {
+    "message": "Serpstat check word in"
+  },
+  "serpstatLocale": {
+    "message": "se=g_ua"
+  },
+  "serpstatDefaultGoogle": {
+    "message": "Google (.COM.UA)"
+  },
+  "pageSpeedLocale": {
+    "message": "hl=ru"
+  }
 }
