Add missing translation strings in BG, RU, UK versions

--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -74,6 +74,9 @@
   "httpHeaders": {
     "message": "HTTP хедъри"
   },
+  "headersData": {
+    "message": "HTTP хедъри"
+  },
   "information": {
     "message": "Информация"
   },
