--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -77,6 +77,9 @@
   "httpHeaders": {
     "message": "HTTP headers"
   },
+  "headersData": {
+    "message": "HTTP Headers"
+  },
   "information": {
     "message": "Information"
   },
