Fixes in Ukranian and Russian version

--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -3,7 +3,7 @@
     "message": "Netpeak Agency SEO Tool"
   },
   "description": {
-    "message": "OnPage SEO Tool"
+    "message": "Netpeak Agency SEO Tool"
   },
   "shortDescription": {
     "message": "OnPage SEO Checker"
@@ -87,7 +87,7 @@
     "message": "За разширението"
   },
   "waiting": {
-    "message": "Зареждане... "
+    "message": "Зареждане..."
   },
   "aboutText": {
     "message": "Това разширение ще ви помогне да откриете лесно част от най-често срещаните SEO OnPage грешки."
