--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -6,58 +6,58 @@
     "message": "Netpeak Agency SEO Tool"
   },
   "shortDescription": {
-    "message": "SEO On Page Checker"
+    "message": "Netpeak Agency SEO Tool"
   },
   "metaTitle": {
-    "message": "Meta title"
+    "message": "Тег title"
   },
   "metaDescription": {
-    "message": "Meta description"
+    "message": "Мета-тег description"
   },
   "canonical": {
     "message": "Canonical"
   },
   "h1Text": {
-    "message": "H1 Element"
+    "message": "Заголовок H1"
   },
   "netpeakCloudIdText": {
     "message": "ID"
   },
   "indexNoindex": {
-    "message": "Meta index/noindex"
+    "message": "Мета-тег index/noindex"
   },
   "metaTitleErrorStart": {
-    "message": "Warning! Too long meta title. Current it is"
+    "message": "Увага! Занадто довгий тег Title. Довжтина - "
   },
   "h1Error": {
-    "message": "Warning! There are more than one H1 tags on that page!"
+    "message": "Увага! На сторінці більше одного заголовка H1"
   },
   "missingH1": {
-    "message": "Warning! Missing H1 element on that page!"
+    "message": "Увага! Заголовок H1 відсутній на сторінці"
   },
   "metaTitleErrorEnd": {
-    "message": "symbols!"
+    "message": "символи"
   },
   "refresh": {
-    "message": "Refresh"
+    "message": "Перезавантажити"
   },
   "back": {
-    "message": "Back"
+    "message": "Назад"
   },
   "externalTools": {
-    "message": "External Tools"
+    "message": "Зовнішні інструменти"
   },
   "netpeakCloud": {
     "message": "Netpeak Cloud"
   },
   "headingsStructure": {
-    "message": "H1-H6 Structure"
+    "message": "Структура заголовків H1-H6"
   },
   "showRobots": {
-    "message": "Show robots.txt"
+    "message": "Показати robots.txt"
   },
   "altTitleImages": {
-    "message": "Alt and Title for images"
+    "message": "Теги Alt і Title для зображень"
   },
   "prevNext": {
     "message": "Prev/Next"
@@ -66,40 +66,40 @@
     "message": "Hreflang"
   },
   "externalLinks": {
-    "message": "External Links"
+    "message": "Зовнішні посилання"
   },
   "structuredData": {
-    "message": "Structured Data"
+    "message": "Мікророзмітка"
   },
   "mainRecommendations": {
-    "message": "Recommendations"
+    "message": "Рекомендації"
   },
   "httpHeaders": {
-    "message": "HTTP headers"
+    "message": "HTTP заголовки"
   },
   "headersData": {
-    "message": "HTTP Headers"
+    "message": "HTTP Заголовки"
   },
   "information": {
-    "message": "Information"
+    "message": "Інформація"
   },
   "httpHeadersPanel": {
-    "message": "HTTP headers panel"
+    "message": "Панель HTTP заголовків"
   },
   "about": {
-    "message": "About"
+    "message": "Про додаток"
   },
   "waiting": {
-    "message": "Waiting..."
+    "message": "Завантаження..."
   },
   "aboutText": {
-    "message": "The extension will help you find onPage errors."
+    "message": "Додаток допоможе знайти внутрішні технічні помилки сайту."
   },
   "aboutAdText": {
-    "message": "Visit <a href='https://netpeak.net/?utm_source=chrome-seo-extension' target='_blank'>Netpeak</a> for profesional service."
+    "message": "Зв`яжіться з <a href='https://netpeak.ua/?utm_source=chrome-seo-extension' target='_blank'>Netpeak</a> за професіональною консультацією."
   },
   "serpstatContextMenu": {
-    "message": "Serpstat check word in"
+    "message": "Перевірка слова в Serpstat"
   },
   "serpstatLocale": {
     "message": "se=g_ua"
