--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -27,7 +27,7 @@
     "message": "Meta index/noindex"
   },
   "metaTitleErrorStart": {
-    "message": "Внивание! Прекалено дълъг meta title. Текущата дължина е: "
+    "message": "Внивание! Прекалено дълъг meta title. Текущата дължина е"
   },
   "h1Error": {
     "message": "Внимание! Налични са повече от един H1 елемента на тази страница."
